fix navbar link margins for better alignment and center text

--- a/src/style.css
+++ b/src/style.css
@@ -40,8 +40,9 @@ body {
   font-size: 18px;
   margin-top: 30px;
   margin-bottom: 30px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
 }
 
 .navbar a img {
